[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marvell_11abbe00"
version = "0.0.5"
authors = [
  { name="yeyus", email="elyeyus@gmail.com" },
]
description = "A library for manipulating configuration in cisco/marvell switches integrated into ENCS54xx platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.31.0",
    "haralyzer==2.4.0",
]

[project.scripts]
marvell_11abbe00_replay = "marvell_11abbe00.replay:main"

[project.urls]
Homepage = "https://github.com/yeyus/marvell-11abbe00"
Issues = "https://github.com/yeyus/marvell-11abbe00/issues"